--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                 <img src="https://www.Github.com/favicon.ico">&nbsp;GitHub
             </a>
         </div>
+        <div class="link">
+            <a target="_blank" rel="noopener noreferrer" class="col-md-6 col-sm-8 btn btn-outline-primary" href="https://www.youtube.com/channel/UCyAq8siZCfDd-WY9qRUL2QA">
+                <img src="https://www.youtube.com/favicon.ico">&nbsp;YouTube
+            </a>
+        </div>
         
         <br />
         <!-- Clock -->
