--- a/index.html
+++ b/index.html
@@ -13,82 +13,98 @@
 			margin-top: 2%;
 		}
 
-		img {
+		.icon {
 			width: 2em;
 		}
 
 		body {
-			background-color: rgb(210, 210, 229);
+			background-color: rgb(33, 33, 63);
+		}
+
+		h1 {
+			font-family: cursive;
+			color: aqua;
 		}
 	</style>
 </head>
 
 <body>
 	<br />
-	<div class="container text-center" style="margin: auto;">
-		<h1 style="font-family:cursive;">Keenan Singh</h1>
+	<div class="container text-center">
+		<div class="container">
+			<img src="/Images/pp.jpg" onerror="this.remove();" class="rounded-circle shadow border border-dark border-3"
+				width="20%">
+			<h1>Keenan Singh</h1>
+		</div>
 		<br>
 		<div class="link">
-			<a target="_blank" rel="noopener noreferrer"
-				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn-outline-primary"
-				href="https://www.linkedin.com/in/keenan-singh/">
-				<img src="https://www.linkedin.com/favicon.ico">&nbsp;LinkedIn
+			<a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/keenan-singh/"
+				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn-outline-info shadow">
+				<img src="https://www.linkedin.com/favicon.ico" class="icon"
+					onerror="this.onerror=null; this.src='/Images/LinkedIn.ico'">&nbsp;LinkedIn
 			</a>
 		</div>
 		<br />
 		<div class="link">
 			<a target="_blank" rel="noopener noreferrer"
-				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn-outline-primary"
-				href="https://www.linkedin.com/in/keenan-singh/details/certifications/">
-				<img src="https://www.linkedin.com/favicon.ico">&nbsp;Certifications
+				href="https://www.linkedin.com/in/keenan-singh/details/certifications/"
+				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn-outline-info shadow">
+				<img src="https://www.linkedin.com/favicon.ico" class="icon"
+					onerror="this.onerror=null; this.src='/Images/LinkedIn.ico'">&nbsp;Certifications
 			</a>
 		</div>
 		<br />
 		<div class="link">
 			<a target="_blank" rel="noopener noreferrer"
-				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-primary"
+				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-info shadow"
 				href="https://www.instagram.com/PhotoNymph9000/">
-				<img src="https://www.instagram.com/favicon.ico">&nbsp;Instgram PhotoNymph @PhotoNymph9000
+				<img src="https://www.instagram.com/favicon.ico" class="icon"
+					onerror="this.onerror=null; this.src='/Images/Instagram.ico'">&nbsp;Instgram Business @PhotoNymph9000
 			</a>
 		</div>
 		<br />
 		<div class="link">
 			<a target="_blank" rel="noopener noreferrer"
-				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-primary"
+				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-info shadow"
 				href="https://www.instagram.com/ksingh9000/">
-				<img src="https://www.instagram.com/favicon.ico">&nbsp;Instgram Personal @KSingh9000
+				<img src="https://www.instagram.com/favicon.ico" class="icon"
+					onerror="this.onerror=null; this.src='/Images/Instagram.ico'">&nbsp;Instgram Personal @KSingh9000
 			</a>
 		</div>
 		<br />
 		<div class="link">
 			<a target="_blank" rel="noopener noreferrer"
-				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-primary"
+				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-info shadow"
 				href="https://www.shutterstock.com/g/PhotoNymph9000">
-				<img src="https://www.shutterstock.com/favicon.ico">&nbsp;Shutterstock
+				<img src="https://www.shutterstock.com/favicon.ico" class="icon"
+					onerror="this.onerror=null; this.src='/Images/Shutterstock.png'">&nbsp;Shutterstock
 			</a>
 		</div>
 		<br />
 		<div class="link">
 			<a target="_blank" rel="noopener noreferrer"
-				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-primary"
+				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-info shadow"
 				href="https://blog.keenan.technology">
-				<img src="https://blog.keenan.technology/favicon.ico">&nbsp;Blog
+				<img src="https://blog.keenan.technology/favicon.ico" class="icon"
+					onerror="this.onerror=null; this.src='favicon.ico'">&nbsp;Blog
 			</a>
 		</div>
 		<br />
 		<div class="link">
 			<a target="_blank" rel="noopener noreferrer"
-				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-primary"
+				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-info shadow"
 				href="https://www.Github.com/ksingh108/">
-				<img src="https://www.Github.com/favicon.ico">&nbsp;GitHub
+				<img src="https://www.Github.com/favicon.ico" class="icon"
+					onerror="this.onerror=null; this.src='/Images/GitHub.ico'">&nbsp;GitHub
 			</a>
 		</div>
 		<br />
 		<div class="link">
 			<a target="_blank" rel="noopener noreferrer"
-				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-primary"
+				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-info shadow"
 				href="https://www.youtube.com/channel/UCyAq8siZCfDd-WY9qRUL2QA">
-				<img src="https://www.youtube.com/favicon.ico">&nbsp;YouTube
+				<img src="https://www.youtube.com/favicon.ico" class="icon"
+					onerror="this.onerror=null; this.src='/Images/YouTube.ico'">&nbsp;YouTube
 			</a>
 		</div>
 
