Fix #5. Time visibility

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<style>
 		.link {
-			margin-top: 2%;
+			margin: 1%;
 		}
 
 		.icon {
@@ -59,7 +59,7 @@
 				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-info shadow"
 				href="https://www.instagram.com/PhotoNymph9000/">
 				<img src="https://www.instagram.com/favicon.ico" class="icon"
-					onerror="this.onerror=null; this.src='/Images/Instagram.ico'">&nbsp;Instgram Business @PhotoNymph9000
+					onerror="this.onerror=null; this.src='/Images/Instagram.ico'">&nbsp;Instagram Business @PhotoNymph9000
 			</a>
 		</div>
 		<br />
@@ -68,7 +68,7 @@
 				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-info shadow"
 				href="https://www.instagram.com/ksingh9000/">
 				<img src="https://www.instagram.com/favicon.ico" class="icon"
-					onerror="this.onerror=null; this.src='/Images/Instagram.ico'">&nbsp;Instgram Personal @KSingh9000
+					onerror="this.onerror=null; this.src='/Images/Instagram.ico'">&nbsp;Instagram Personal @KSingh9000
 			</a>
 		</div>
 		<br />
@@ -107,17 +107,17 @@
 					onerror="this.onerror=null; this.src='/Images/YouTube.ico'">&nbsp;YouTube
 			</a>
 		</div>
-
-		<br />
+		<hr />
 		<!-- Clock -->
-		<div>
+		<div style="color: aqua;">
 			<h3 id="clock__title">Local Time</h3>
 			<span id="clock__hour">00 : </span>
 			<span id="clock__minute">00 : </span>
 			<span id="clock__second">00</span>
 		</div>
 	</div>
-
+	<br />
+	<br />
 </body>
 
 <script type="text/javascript">
