--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		</div>
 		<hr />
 		<!-- Clock -->
-		<div style="color: aqua;">
+		<div style="color: Red;">
 			<h3 id="clock__title">Local Time</h3>
 			<span id="clock__hour">00 : </span>
 			<span id="clock__minute">00 : </span>
