--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<!-- <meta name="color-scheme" content="dark light"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="/favicon.png">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0X48418B36"></script>
@@ -86,7 +86,7 @@
 				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-info shadow"
 				href="https://blog.keenan.technology">
 				<img src="https://blog.keenan.technology/favicon.ico" class="icon"
-					onerror="this.onerror=null; this.src='favicon.ico'">&nbsp;Blog
+					onerror="this.onerror=null; this.src='favicon.png'">&nbsp;Blog
 			</a>
 		</div>
 		<br />
