--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				class="col-sm-12 col-md-10 col-lg-6 col-xl-5 btn btn btn-outline-info shadow"
 				href="https://codepen.io/KSingh9000">
 				<img src="https://codepen.io/favicon.ico" class="icon"
-					onerror="this.onerror=null; this.src='/Images/codepen.png'">&nbsp;CodePen
+					onerror="this.onerror=null; this.src='/Images/CodePen.png'">&nbsp;CodePen
 			</a>
 		</div>
 		<br />
